# figures

./: CMakeLists.txt
headers/figure/: figure.hpp  quadrilateral.hpp  rectangle.hpp  rhombus.hpp  trapeze.hpp
test/: CMakeLists.txt  flat_vector_test.cpp  quad_test.cpp
